# open-mcp-proxy

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py
src/: example_proxy.py
src/omproxy/: cli.py  new_proxy.py  proxy.py
src/proxymcp/: cli.py  proxy.py
